tests/models/struct/unnamed/usize/fail/max_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(max_length = 2)]
    usize
);
fn main() {}
